# aws-architectures

./: README.md
aws-athena/: README.md  pyproject.toml  requirements.txt
aws-athena/cloudformation/: deploy-cfn.sh
aws-athena/cloudformation/nested/: athena.yaml  eventbridge.yaml
aws-athena/docs/: BUSINESS_LOGIC.md
aws-athena/glue/: etl_job.py
aws-athena/scripts/: build.sh  deploy.sh  destroy.sh
aws-athena/src/common/: config.py  models.py
aws-athena/src/handlers/: etl_handler.py
aws-athena/src/services/: __init__.py  glue_service.py
aws-call-sentiment/: README.md  pyproject.toml
aws-call-sentiment/docs/: COST_SIMULATION.md
aws-call-sentiment/scripts/: deploy.sh  destroy.sh
aws-call-sentiment/src/common/: __init__.py  exceptions.py  models.py
aws-call-sentiment/src/handlers/: api_handler.py  comprehend_handler.py
aws-ml/: README.md  pyproject.toml  requirements-dev.txt
aws-ml/docs/: COST_SIMULATION.md
aws-ml/sagemaker/: requirements.txt
aws-ml/sagemaker/training/: preprocessing.py  train.py
aws-ml/scripts/: deploy.sh
aws-ml/src/: __init__.py
aws-ml/src/common/: clients.py  utils.py
aws-ml/src/handlers/: __init__.py  notification.py  training_pipeline.py  workflow_orchestration.py
aws-ml/src/services/: bedrock_service.py  comprehend_service.py  transcribe_service.py
aws-ml/terraform/: terraform.tfvars.example  variables.tf
aws-ml/tests/: __init__.py
aws-ml/tests/unit/: test_models.py
aws-serverless/: pyproject.toml  requirements.txt
aws-serverless/docs/: BUSINESS_LOGIC.md  COST_SIMULATION.md
aws-serverless/scripts/: build.sh  test.sh
aws-serverless/src/common/: config.py  security.py  utils.py
aws-serverless/src/handlers/: __init__.py  api_handler.py  async_processor.py  audit_handler.py  event_router.py  scheduled_task.py
aws-serverless/src/services/: crm_service.py
aws-serverless/terraform/: main.tf  outputs.tf  providers.tf
conversational-ai/: pyproject.toml
conversational-ai/cloudformation/nested/: api-gateway.yaml  cloudwatch.yaml  lex.yaml
conversational-ai/docs/: BUSINESS_LOGIC.md  COST_SIMULATION.md
conversational-ai/scripts/: deploy.sh  destroy.sh
conversational-ai/src/common/: models.py
conversational-ai/src/handlers/: book_flight_handler.py  check_in_handler.py
conversational-ai/src/services/: booking_service.py  checkin_service.py  flight_service.py
conversational-ai/terraform/: outputs.tf  variables.tf
genai-knowledge-assistant/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
genai-knowledge-assistant/cloudformation/: deploy-cfn.sh  main.yaml
genai-knowledge-assistant/cloudformation/nested/: api-gateway.yaml  bedrock.yaml  cloudwatch.yaml  dynamodb.yaml  iam.yaml  lambda.yaml  opensearch.yaml  s3.yaml
genai-knowledge-assistant/docs/: BUSINESS_LOGIC.md  COST_SIMULATION.md
genai-knowledge-assistant/sam/: samconfig.toml  template.yaml
genai-knowledge-assistant/scripts/: build.sh  deploy-sam.sh  deploy.sh  destroy.sh  test.sh
genai-knowledge-assistant/src/: __init__.py
genai-knowledge-assistant/src/common/: __init__.py  clients.py  config.py  exceptions.py  models.py
genai-knowledge-assistant/src/handlers/: __init__.py  agent_handler.py  api_handler.py  ingestion_handler.py  query_handler.py  sync_handler.py
genai-knowledge-assistant/src/services/: __init__.py  agent_service.py  bedrock_service.py  document_service.py  embedding_service.py  knowledge_base_service.py  query_service.py  vector_store_service.py
genai-knowledge-assistant/terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
genai-knowledge-assistant/tests/: __init__.py  conftest.py
genai-knowledge-assistant/tests/integration/: __init__.py
genai-knowledge-assistant/tests/unit/: __init__.py  test_exceptions.py  test_models.py
ml-canary-deployment/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
ml-canary-deployment/cloudformation/: deploy-cfn.sh  main.yaml
ml-canary-deployment/cloudformation/nested/: api-gateway.yaml  cloudwatch.yaml  dynamodb.yaml  iam.yaml  lambda.yaml  s3.yaml  sagemaker.yaml  sns.yaml
ml-canary-deployment/docs/: BUSINESS_LOGIC.md  COST_SIMULATION.md
ml-canary-deployment/sagemaker/training/: inference.py  preprocessing.py  requirements.txt  train.py
ml-canary-deployment/sam/: samconfig.toml  template.yaml
ml-canary-deployment/scripts/: build-sam.sh  build.sh  deploy-sam.sh  deploy.sh  destroy-sam.sh  destroy.sh  test.sh
ml-canary-deployment/src/: __init__.py
ml-canary-deployment/src/common/: __init__.py  clients.py  config.py  exceptions.py  models.py  utils.py
ml-canary-deployment/src/handlers/: __init__.py  api_handler.py  deployment_handler.py  monitoring_handler.py  rollback_handler.py  traffic_shift_handler.py
ml-canary-deployment/src/services/: __init__.py  deployment_service.py  inference_service.py  monitoring_service.py  notification_service.py  traffic_service.py
ml-canary-deployment/terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
ml-canary-deployment/tests/: __init__.py  conftest.py
ml-canary-deployment/tests/integration/: __init__.py
ml-canary-deployment/tests/unit/: __init__.py  test_models.py  test_utils.py
secure-ml-transformation/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
secure-ml-transformation/cloudformation/: deploy-cfn.sh  main.yaml
secure-ml-transformation/cloudformation/nested/: cloudwatch.yaml  glue.yaml  iam.yaml  kms.yaml  s3.yaml  vpc.yaml
secure-ml-transformation/docs/: BUSINESS_LOGIC.md  COST_SIMULATION.md
secure-ml-transformation/glue/: __init__.py
secure-ml-transformation/glue/jobs/: __init__.py  amount_binning.py  (+4 more)
secure-ml-transformation/sam/: samconfig.toml  template.yaml
secure-ml-transformation/scripts/: build-sam.sh  build.sh  deploy-sam.sh  deploy.sh  destroy-sam.sh  destroy.sh  test.sh
secure-ml-transformation/src/: __init__.py
secure-ml-transformation/terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
secure-ml-transformation/tests/: __init__.py  conftest.py
(+598 files in other folders)
