[project]
name = "aws-athena-datalake"
version = "0.1.0"
description = "Data lake analytics with Athena, Parquet optimization, and Lake Formation security"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aws-lambda-powertools>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "moto>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "boto3-stubs[athena,glue,lakeformation,s3]>=1.34.0",
]
glue = [
    "awsglue>=4.0.0",
    "pyspark>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
